3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/spell_effect.c: Fix bug in summon_cult_monster that would result
in crash if monster was killed when inserted.  MSW 2002-02-10

common/map.c: load_map_header: If the map message is empty, don't copy
    uninitialized data as the message.  This fixes various crashes.
lib/Makefile.in: Remove the adm/*xpm* utilities, as they are no longer
    needed or distributed.
server/apply.c: set the player speed to zero after they use a savebed.
    Fixes crashes with players that have constant image animation (fireborns)
    when they apply the savebed and the map then gets swapped out.
server/plugins.c: Fix some serious memory leaks.  Some still remain, with
    my comments included.
server/skills.c: Removed unused variable.
MSW 2002-02-05

include/player.h include/sproto.h server/c_chat.c server/player.c:
   New player command 'reply', replies to the last person who told you
   something.
server/c_wiz.c: New DM command 'teleport', lets a DM teleport next
   to target player, it is an inverse summon.
server/commands.c: Add hooks for 'reply' and 'teleport'.
mids 2002-01-16

TODO: updated with bugs, remove things that have been done and are no
  longer TODO's.
configure.in, configure: Remove lib/xpmtopix.pl file form those to be
  built, as that file has been removed.
common/object.c: Fix bug in check_walk_on which would result in spell
  objects not being properly processed - the intention is not to process
  spell objects - we should stop going up (in previous loop) when we
  get such an object, not on the way down.  This fixes directors not 
  working really well.
MSW 2001-01-13
